  - Move all project controllers/views under Projects:: module
  - Move all profile controllers/views under Profiles:: module
  - Redesign ssh keys page
  - Generate fingerprint for ssh keys
  - You can use arrows to navigate at tree view
  - Apply user project limit only for personal projects
  - API: Allow login with LDAP credentials
  - Ability to remove branches/tags with UI

v 5.4.0
  - Ability to edit own comments
  - Documentation improvements
  - Improve dashboard projects page
  - Fixed nav for empty repos
  - GitLab Markdown help page
  - Misspelling fixes
  - Added support of unicorn and fog gems
  - Added client list to API doc
  - Fix PostgreSQL database restoration problem
  - Increase snippet content column size
  - allow project import via git:// url
  - Show participants on issues, including mentions
  - Notify mentioned users with email

v 5.3.0
  - Refactored services 
  - Campfire service added
  - HipChat service added
  - Fixed bug with LDAP + git over http
  - Fixed bug with google analytics code being ignored
  - Improve sign-in page if ldap enabled
  - Respect newlines in wall messages
  - Generate the Rails secret token on first run
  - Rename repo feature
  - Init.d: remove gitlab.socket on service start
  - Api: added teams api
  - Api: Prevent blob content being escaped
  - Api: Smart deploy key add behaviour
  - Api: projects/owned.json return user owned project
  - Fix bug with team assignation on project from #4109
  - Advanced snippets: public/private, project/personal (Andrew Kulakov)
  - Repository Graphs (Karlo Nicholas T. Soriano)
  - Fix dashboard lost if comment on commit
  - Update gitlab-grack. Fixes issue with --depth option
  - Fix project events duplicate on project page
  - Fix postgres error when displaying network graph.
  - Fix dashboard event filter when navigate via turbolinks
  - init.d: Ensure socket is removed before starting service
  - Admin area: Style teams:index, group:show pages