@@ -24,6 +24,10 @@ class OmniauthCallbacksController < Devise::OmniauthCallbacksController
     sign_in_and_redirect @user
   end
 
+  def env
+    handle_omniauth
+  end
+
   private
 
   def handle_omniauth
