@@ -1,0 +1,2 @@
+%script
+  window.location.href = '/users/auth/env'
